objects/Product_Price__c.object
<CustomObject>
    <description>Product Prices for Processing</description>
    <fields>
        <fullName>CPM_ID__c</fullName>
        <externalId>true</externalId>
        <label>CPM ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Current_List_Price__c</fullName>
        <formula>Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current List Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndSupportDate__c</fullName>
        <formula>IF(CONTAINS(Product_Number__c,&apos;M1&apos; ), Product__r.Parent_Product__r.End_Support_Date__c, Product__r.End_Support_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EndSupportDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <label>GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <formula>Product_Number__c+&apos;_&apos;+Pricing_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LIC_Type__c</fullName>
        <formula>Pricing_Type__c</formula>
        <label>LIC Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <formula>Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maint_List_Price__c</fullName>
        <formula>Maint_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maint List Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maint_Price__c</fullName>
        <label>Maint_Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pricebook_Entry_Id__c</fullName>
        <label>Pricebook Entry Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricebook_Id__c</fullName>
        <label>Pricebook Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Type_CPM_ID__c</fullName>
        <formula>VALUE(Product_Price_Type__r.CPM_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Type CPM ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pricing_Type__c</fullName>
        <label>Pricing Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_CPM_ID__c</fullName>
        <formula>Product__r.CPM_ID_Numeric__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product CPM ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <formula>Product__r.Product_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Price_Type_Name__c</fullName>
        <formula>Product_Price_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Price Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Price_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Price Type</label>
        <referenceTo>Product_Price_Type__c</referenceTo>
        <relationshipLabel>Product Prices</relationshipLabel>
        <relationshipName>Product_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Row_Id__c</fullName>
        <label>Product Row Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Price</relationshipLabel>
        <relationshipName>Product_Price</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>ACTIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INACTIVE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TBL_List_Price__c</fullName>
        <formula>IF(ISNULL(IF( Pricing_Type__c = &apos;TBL&apos;,  Price__c, null)), 0.4 *  Price__c , IF( Pricing_Type__c = &apos;TBL&apos;,  Price__c, null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TBL List Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TBL_Price__c</fullName>
        <formula>IF(ISNULL(IF( Pricing_Type__c = &apos;TBL&apos;, Price__c, null)), 0.4 * Price__c , IF( Pricing_Type__c = &apos;TBL&apos;, Price__c, null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TBL Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Price</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Pricing_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Pricebook_Id__c</columns>
        <columns>Pricebook_Entry_Id__c</columns>
        <columns>CPM_ID__c</columns>
        <columns>Product__c</columns>
        <columns>Price__c</columns>
        <columns>Pricing_Type_CPM_ID__c</columns>
        <columns>GUID__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PRI-{0000}</displayFormat>
        <label>Product Price</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>